SF Primes/src/objects/Docusign_Deal_State_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Allow_Null__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Null?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_State_Field__c</fullName>
        <label>Deal State Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quote_Field__c</fullName>
        <label>Opportunity Quote Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Docusign Deal State Fields</label>
</CustomObject>